[package]
name = "hermes"
version = "0.1.1"
edition = "2021"

[profile.release]
opt-level = "s"
lto = "thin"
strip = "symbols"
debug = false
panic = "abort"

[dependencies]
anyhow = "1.0.86"
chardetng = { version = "0.1.17", features = ["multithreading"] }
clap = { version = "4.5.8", features= ["derive"] }
encoding_rs = { version = "0.8.34", features = ["simd-accel"] }
jwalk = "0.8.1"
rayon = "1.10.0"
